# Arterypedia

./: CMakeLists.txt  README.md
arterypedia/: main.cpp
src/: abbreviations.txt  main.cpp  menu.cpp  menu.h
src/branches/: cca.cpp  ica.cpp
